# Tasks-Project-SkyPro

./: .coverage  .flake8  .gitignore  README.md  log.txt  main.py  pyproject.toml  requirements.txt  testlog.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_csv_excel_py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
src/: csv_excel.py  decorators.py  external_api.py  generators.py  log.txt  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test.txt  test_csv_excel.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
