[tool.poetry]
name = "TasksProject"
version = "0.1.0"
description = ""
authors = ["Igor Zherdev <cardinal3300@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
pip = "^25.1.1"
poetry-core = "^2.1.3"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = """ \\.git """

[tool.isort]
profile = "black"

[tool.mypy]
strict_optional = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
