[tool.poetry]
name = "TasksProject"
version = "0.1.0"
description = ""
authors = ["Igor Zherdev <cardinal3300@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.0"
pip = "^25.1.1"
poetry-core = "^2.1.3"
requests = "^2.32.4"
python-dotenv = "^1.1.1"
logging = "^0.4.9.6"
openpyxl = "^3.1.5"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = """ \\.git """

[tool.isort]
profile = "black"

[tool.mypy]
strict_optional = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
